<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kumo</name>
  <version>0.2.0</version>
  <description>WebSocket bridge for ROS 2</description>
  <maintainer email="alfi.maulana.f@gmail.com">Alfi Maulana</maintainer>
  <license>MIT License</license>
  <url>https://github.com/ichiro-its/kumo</url>
  <depend>kumo_json</depend>
  <depend>python3-argparse</depend>
  <depend>python3-asyncio</depend>
  <depend>python3-websockets</depend>
  <depend>rclpy</depend>
  <depend>rosidl_runtime_py</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
